# aiod_registry

./: .gitignore  pyproject.toml
.github/workflows/: generate-configs.yml  publish.yml  run_tests.yml
aiod_registry/: __init__.py  schema.json  schema.py  utils.py
aiod_registry/default_configs/: panseg.yaml  sam.yaml  sam2.yaml  stardist.yaml
aiod_registry/manifests/: cellpose.json  cellposesam.json  empanada.json  panseg.json  plantseg2.json  sam.json  sam2.json  seai_unet.json  stardist.json
default_configs/: cellpose.yaml  cellposesam.yaml  empanada.yaml
tests/: test_jsons.py  test_utils.py
