[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools>=61.0.0',
]

[project]
name = "aiod-registry"
description = "A registry of models for use with AI OnDemand (AIoD)"
version = "0.0.1"
authors = [
    {name = "Cameron Shand", email = "cameron.shand@crick.ac.uk"},
    {name = "Numan Ahmed", email = "numan.ahmed@crick.ac.uk"},
    {name = "Qin Yu", email = "qin.yu@crick.ac.uk"},
    {name = "Fiona Young", email = "fiona.young@crick.ac.uk"},
    {name = "Jon Smith", email = "jon.smith@crick.ac.uk"}
]
dependencies = [
    "pydantic >= 2.0",
    "pyyaml",
]
requires-python = ">=3.11"
dynamic = ["readme"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
aiod-gen-configs = "aiod_registry.utils:_gen_configs_cli"

[tool.setuptools.packages.find]
include = ["aiod_registry*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
addopts = "--cov=aiod_registry --cov-report=term-missing"